@@ -137,7 +137,7 @@ const std::vector<const unit*> get_recalls_for_location(int side, const map_loca
  * @returns true if an event has mutated the game state.
  */
 bool place_recruit(const unit &u, const map_location &recruit_location, const map_location& recruited_from,
-	bool is_recall, bool show = false, bool fire_event = true, bool full_movement = false,
+	int cost, bool is_recall, bool show = false, bool fire_event = true, bool full_movement = false,
 	bool wml_triggered = false);
 
 #endif
